# WebThinker

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/datasets/: gaia.json  glaive.json  tasks.json
data/encoded/: gaia.json  gpqa.json  hle.json  webwalkerqa.json
src/webthinker/: config.py  evaluate.py  graph.py  graph_report.py  model.py  prepare.py  prompts.py  prompts_report.py  run.py  run_report.py  schema.py  utils.py
